[gd_scene load_steps=5 format=3 uid="uid://cfvdf4gjqh4dm"]

[ext_resource type="Script" uid="uid://b5pors64c1yn4" path="res://scripts/enemy_2.gd" id="1_jav2a"]
[ext_resource type="PackedScene" uid="uid://bbh65bnriijcd" path="res://objects/explosion_orange.tscn" id="2_plgxw"]
[ext_resource type="Texture2D" uid="uid://e5yc6mcywv26" path="res://gfx/enemy2.png" id="2_ynert"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ynert"]
radius = 8.0
height = 32.0

[node name="Enemy2" type="RigidBody2D"]
script = ExtResource("1_jav2a")
Explosion = ExtResource("2_plgxw")

[node name="ShipSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ynert")

[node name="ShipAnimationPlayer" type="AnimationPlayer" parent="ShipSprite"]

[node name="EnemyHitbox" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ynert")
